[gd_scene load_steps=13 format=2]

[ext_resource path="res://Piece.gd" type="Script" id=1]
[ext_resource path="res://AudioFiles/Click1.mp3" type="AudioStream" id=2]
[ext_resource path="res://AudioFiles/onCapture.mp3" type="AudioStream" id=3]

[sub_resource type="ArrayMesh" id=1]
resource_name = "Cylinder"
surfaces/0 = {
"aabb": AABB( -0.951056, -1, -0.983086, 1.90211, 2, 1.96617 ),
"array_data": PoolByteArray( 171, 37, 9, 191, 5, 253, 113, 191, 55, 112, 83, 191, 129, 95, 161, 63, 213, 45, 199, 55, 171, 37, 9, 191, 5, 253, 113, 63, 55, 112, 83, 191, 129, 95, 161, 63, 213, 45, 1, 35, 52, 55, 85, 189, 5, 253, 113, 63, 134, 171, 123, 191, 129, 95, 161, 63, 136, 32, 1, 35, 52, 55, 85, 189, 5, 253, 113, 191, 134, 171, 123, 191, 129, 95, 161, 63, 136, 32, 199, 55, 121, 120, 115, 63, 5, 253, 113, 191, 131, 49, 130, 190, 126, 0, 127, 126, 84, 58, 199, 55, 121, 120, 115, 63, 5, 253, 113, 63, 131, 49, 130, 190, 126, 0, 127, 126, 84, 58, 1, 35, 104, 120, 115, 63, 5, 253, 113, 63, 131, 49, 130, 62, 126, 0, 127, 126, 171, 57, 1, 35, 104, 120, 115, 63, 5, 253, 113, 191, 131, 49, 130, 62, 126, 0, 127, 126, 171, 57, 199, 55, 12, 60, 107, 63, 5, 253, 113, 191, 88, 227, 180, 62, 73, 0, 127, 100, 135, 57, 199, 55, 12, 60, 107, 63, 5, 253, 113, 63, 88, 227, 180, 62, 73, 0, 127, 100, 135, 57, 1, 35, 128, 181, 30, 63, 5, 253, 113, 63, 206, 197, 67, 63, 73, 0, 127, 100, 222, 56, 1, 35, 128, 181, 30, 63, 5, 253, 113, 191, 206, 197, 67, 63, 73, 0, 127, 100, 222, 56, 199, 55, 171, 37, 9, 63, 5, 253, 113, 191, 55, 112, 83, 63, 31, 0, 126, 79, 186, 56, 199, 55, 171, 37, 9, 63, 5, 253, 113, 63, 55, 112, 83, 63, 31, 0, 126, 79, 186, 56, 1, 35, 25, 55, 85, 61, 5, 253, 113, 63, 134, 171, 123, 63, 31, 0, 127, 79, 18, 56, 1, 35, 25, 55, 85, 61, 5, 253, 113, 191, 134, 171, 123, 63, 31, 0, 126, 79, 18, 56, 199, 55, 79, 55, 85, 189, 5, 253, 113, 191, 134, 171, 123, 63, 225, 0, 95, 63, 219, 55, 199, 55, 79, 55, 85, 189, 5, 253, 113, 63, 134, 171, 123, 63, 225, 0, 95, 63, 219, 55, 1, 35, 171, 37, 9, 191, 5, 253, 113, 63, 55, 112, 83, 63, 225, 0, 95, 63, 138, 54, 1, 35, 171, 37, 9, 191, 5, 253, 113, 191, 38, 112, 83, 63, 225, 0, 95, 63, 138, 54, 199, 55, 128, 181, 30, 191, 5, 253, 113, 191, 206, 197, 67, 63, 183, 0, 53, 63, 66, 54, 199, 55, 128, 181, 30, 191, 5, 253, 113, 63, 206, 197, 67, 63, 183, 0, 53, 63, 66, 54, 1, 35, 12, 60, 107, 191, 5, 253, 113, 63, 88, 227, 180, 62, 183, 0, 53, 63, 241, 52, 1, 35, 12, 60, 107, 191, 5, 253, 113, 191, 88, 227, 180, 62, 183, 0, 53, 63, 241, 52, 199, 55, 104, 120, 115, 191, 5, 253, 113, 191, 131, 49, 130, 62, 129, 0, 0, 63, 168, 52, 199, 55, 104, 120, 115, 191, 5, 253, 113, 63, 131, 49, 130, 62, 129, 0, 0, 63, 168, 52, 1, 35, 104, 120, 115, 191, 5, 253, 113, 63, 131, 49, 130, 190, 129, 0, 0, 63, 174, 50, 1, 35, 104, 120, 115, 191, 5, 253, 113, 191, 131, 49, 130, 190, 129, 0, 0, 63, 174, 50, 199, 55, 12, 60, 107, 191, 5, 253, 113, 191, 88, 227, 180, 190, 129, 53, 203, 63, 29, 50, 199, 55, 12, 60, 107, 191, 5, 253, 113, 63, 88, 227, 180, 190, 129, 53, 203, 63, 29, 50, 1, 35, 128, 181, 30, 191, 5, 253, 113, 63, 206, 197, 67, 191, 129, 53, 203, 63, 247, 46, 1, 35, 128, 181, 30, 191, 5, 253, 113, 191, 206, 197, 67, 191, 129, 53, 203, 63, 247, 46, 199, 55, 128, 181, 30, 63, 5, 253, 113, 191, 206, 197, 67, 191, 127, 53, 130, 26, 33, 59, 199, 55, 128, 181, 30, 63, 5, 253, 113, 63, 206, 197, 67, 191, 127, 53, 129, 100, 33, 59, 1, 35, 12, 60, 107, 63, 5, 253, 113, 63, 88, 227, 180, 190, 127, 53, 130, 26, 120, 58, 1, 35, 12, 60, 107, 63, 5, 253, 113, 191, 88, 227, 180, 190, 127, 53, 130, 26, 120, 58, 199, 55, 109, 117, 101, 191, 0, 0, 128, 63, 126, 28, 149, 190, 0, 127, 127, 63, 119, 40, 112, 57, 49, 208, 13, 63, 0, 0, 128, 63, 115, 48, 67, 63, 0, 127, 127, 63, 32, 54, 118, 59, 109, 117, 101, 63, 0, 0, 128, 63, 126, 28, 149, 190, 0, 127, 127, 63, 113, 55, 112, 57, 52, 55, 85, 61, 5, 253, 113, 191, 134, 171, 123, 191, 127, 95, 130, 47, 237, 59, 199, 55, 52, 55, 85, 61, 5, 253, 113, 63, 134, 171, 123, 191, 127, 95, 130, 47, 237, 59, 1, 35, 171, 37, 9, 63, 5, 253, 113, 63, 55, 112, 83, 191, 127, 95, 130, 47, 69, 59, 1, 35, 171, 37, 9, 63, 5, 253, 113, 191, 55, 112, 83, 191, 127, 95, 130, 47, 69, 59, 199, 55, 255, 255, 127, 49, 0, 0, 128, 191, 103, 68, 113, 191, 72, 129, 177, 104, 228, 25, 0, 56, 52, 55, 85, 189, 5, 253, 113, 191, 134, 171, 123, 191, 72, 129, 177, 104, 136, 32, 0, 56, 52, 55, 85, 61, 5, 253, 113, 191, 134, 171, 123, 191, 72, 129, 177, 104, 0, 0, 199, 55, 22, 0, 0, 177, 0, 0, 128, 63, 103, 68, 113, 191, 72, 127, 177, 22, 228, 25, 0, 0, 52, 55, 85, 61, 5, 253, 113, 63, 134, 171, 123, 191, 72, 127, 177, 22, 0, 0, 1, 35, 52, 55, 85, 189, 5, 253, 113, 63, 134, 171, 123, 191, 72, 127, 177, 22, 136, 32, 0, 0, 49, 208, 13, 63, 0, 0, 128, 191, 115, 48, 67, 191, 82, 164, 127, 193, 57, 59, 0, 56, 171, 37, 9, 63, 5, 253, 113, 191, 55, 112, 83, 191, 82, 164, 127, 193, 51, 59, 199, 55, 128, 181, 30, 63, 5, 253, 113, 191, 206, 197, 67, 191, 82, 164, 127, 193, 51, 59, 199, 55, 49, 208, 13, 63, 0, 0, 128, 63, 115, 48, 67, 191, 82, 92, 127, 193, 45, 59, 0, 0, 128, 181, 30, 63, 5, 253, 113, 63, 206, 197, 67, 191, 82, 92, 127, 193, 51, 59, 1, 35, 171, 37, 9, 63, 5, 253, 113, 63, 55, 112, 83, 191, 82, 92, 127, 193, 51, 59, 1, 35, 109, 117, 101, 63, 0, 0, 128, 191, 126, 28, 149, 190, 79, 190, 77, 116, 108, 58, 0, 56, 12, 60, 107, 63, 5, 253, 113, 191, 88, 227, 180, 190, 79, 190, 77, 116, 120, 58, 0, 56, 121, 120, 115, 63, 5, 253, 113, 191, 131, 49, 130, 190, 79, 190, 77, 116, 102, 58, 199, 55, 109, 117, 101, 63, 0, 0, 128, 63, 126, 28, 149, 190, 79, 66, 77, 10, 108, 58, 0, 0, 121, 120, 115, 63, 5, 253, 113, 63, 131, 49, 130, 190, 79, 66, 77, 10, 102, 58, 1, 35, 12, 60, 107, 63, 5, 253, 113, 63, 88, 227, 180, 190, 79, 66, 77, 10, 120, 58, 0, 0, 109, 117, 101, 63, 0, 0, 128, 191, 126, 28, 149, 62, 60, 209, 79, 103, 159, 57, 0, 56, 104, 120, 115, 63, 5, 253, 113, 191, 131, 49, 130, 62, 60, 209, 79, 103, 171, 57, 0, 56, 12, 60, 107, 63, 5, 253, 113, 191, 88, 227, 180, 62, 60, 209, 79, 103, 153, 57, 199, 55, 109, 117, 101, 63, 0, 0, 128, 63, 126, 28, 149, 62, 60, 47, 127, 193, 159, 57, 0, 0, 12, 60, 107, 63, 5, 253, 113, 63, 88, 227, 180, 62, 60, 47, 127, 193, 153, 57, 1, 35, 104, 120, 115, 63, 5, 253, 113, 63, 131, 49, 130, 62, 60, 47, 127, 193, 153, 57, 1, 35, 49, 208, 13, 63, 0, 0, 128, 191, 115, 48, 67, 63, 34, 212, 68, 91, 210, 56, 0, 56, 128, 181, 30, 63, 5, 253, 113, 191, 206, 197, 67, 63, 34, 212, 68, 91, 222, 56, 0, 56, 171, 37, 9, 63, 5, 253, 113, 191, 55, 112, 83, 63, 34, 212, 68, 91, 204, 56, 199, 55, 49, 208, 13, 63, 0, 0, 128, 63, 115, 48, 67, 63, 34, 44, 68, 35, 210, 56, 0, 0, 171, 37, 9, 63, 5, 253, 113, 63, 55, 112, 83, 63, 34, 44, 68, 35, 204, 56, 1, 35, 128, 181, 30, 63, 5, 253, 113, 63, 206, 197, 67, 63, 34, 44, 68, 35, 222, 56, 0, 0, 252, 255, 179, 179, 0, 0, 128, 191, 103, 68, 113, 63, 0, 202, 79, 22, 244, 55, 0, 56, 25, 55, 85, 61, 5, 253, 113, 191, 134, 171, 123, 63, 0, 202, 79, 22, 0, 56, 199, 55, 79, 55, 85, 189, 5, 253, 113, 191, 134, 171, 123, 63, 0, 202, 79, 22, 219, 55, 0, 56, 2, 0, 176, 179, 0, 0, 128, 63, 103, 68, 113, 63, 0, 54, 79, 104, 244, 55, 0, 0, 79, 55, 85, 189, 5, 253, 113, 63, 134, 171, 123, 63, 0, 54, 79, 104, 219, 55, 0, 0, 25, 55, 85, 61, 5, 253, 113, 63, 134, 171, 123, 63, 0, 54, 79, 104, 0, 56, 1, 35, 49, 208, 13, 191, 0, 0, 128, 191, 115, 48, 67, 63, 222, 212, 127, 193, 114, 54, 0, 56, 171, 37, 9, 191, 5, 253, 113, 191, 38, 112, 83, 63, 222, 212, 127, 193, 102, 54, 199, 55, 128, 181, 30, 191, 5, 253, 113, 191, 206, 197, 67, 63, 222, 212, 127, 193, 102, 54, 199, 55, 49, 208, 13, 191, 0, 0, 128, 63, 115, 48, 67, 63, 222, 44, 127, 193, 90, 54, 0, 0, 128, 181, 30, 191, 5, 253, 113, 63, 206, 197, 67, 63, 222, 44, 127, 193, 102, 54, 1, 35, 171, 37, 9, 191, 5, 253, 113, 63, 55, 112, 83, 63, 222, 44, 127, 193, 102, 54, 1, 35, 109, 117, 101, 191, 0, 0, 128, 191, 126, 28, 149, 62, 196, 209, 127, 193, 216, 52, 0, 56, 12, 60, 107, 191, 5, 253, 113, 191, 88, 227, 180, 62, 196, 209, 127, 193, 204, 52, 199, 55, 104, 120, 115, 191, 5, 253, 113, 191, 131, 49, 130, 62, 196, 209, 127, 193, 204, 52, 199, 55, 109, 117, 101, 191, 0, 0, 128, 63, 126, 28, 149, 62, 196, 47, 47, 87, 193, 52, 0, 0, 104, 120, 115, 191, 5, 253, 113, 63, 131, 49, 130, 62, 196, 47, 47, 87, 168, 52, 0, 0, 12, 60, 107, 191, 5, 253, 113, 63, 88, 227, 180, 62, 196, 47, 47, 87, 204, 52, 1, 35, 109, 117, 101, 191, 0, 0, 128, 191, 126, 28, 149, 190, 177, 190, 209, 87, 125, 50, 0, 56, 104, 120, 115, 191, 5, 253, 113, 191, 131, 49, 130, 190, 177, 190, 209, 87, 174, 50, 0, 56, 12, 60, 107, 191, 5, 253, 113, 191, 88, 227, 180, 190, 177, 190, 209, 87, 102, 50, 199, 55, 109, 117, 101, 191, 0, 0, 128, 63, 126, 28, 149, 190, 177, 66, 127, 193, 125, 50, 0, 0, 12, 60, 107, 191, 5, 253, 113, 63, 88, 227, 180, 190, 177, 66, 127, 193, 102, 50, 1, 35, 104, 120, 115, 191, 5, 253, 113, 63, 131, 49, 130, 190, 177, 66, 127, 193, 102, 50, 1, 35, 49, 208, 13, 191, 0, 0, 128, 191, 115, 48, 67, 191, 174, 164, 186, 92, 149, 46, 0, 56, 128, 181, 30, 191, 5, 253, 113, 191, 206, 197, 67, 191, 174, 164, 186, 92, 247, 46, 0, 56, 171, 37, 9, 191, 5, 253, 113, 191, 55, 112, 83, 191, 174, 164, 186, 92, 102, 46, 199, 55, 49, 208, 13, 191, 0, 0, 128, 63, 115, 48, 67, 191, 174, 92, 186, 34, 149, 46, 0, 0, 171, 37, 9, 191, 5, 253, 113, 63, 55, 112, 83, 191, 174, 92, 186, 34, 102, 46, 1, 35, 128, 181, 30, 191, 5, 253, 113, 63, 206, 197, 67, 191, 174, 92, 186, 34, 247, 46, 0, 0, 52, 55, 85, 61, 5, 253, 113, 191, 134, 171, 123, 191, 70, 147, 130, 47, 237, 59, 199, 55, 171, 37, 9, 63, 5, 253, 113, 191, 55, 112, 83, 191, 70, 147, 130, 47, 69, 59, 199, 55, 49, 208, 13, 63, 0, 0, 128, 191, 115, 48, 67, 191, 70, 147, 130, 47, 57, 59, 0, 56, 255, 255, 127, 49, 0, 0, 128, 191, 103, 68, 113, 191, 70, 147, 130, 47, 250, 59, 0, 56, 171, 37, 9, 63, 5, 253, 113, 63, 55, 112, 83, 191, 70, 109, 130, 47, 69, 59, 1, 35, 52, 55, 85, 61, 5, 253, 113, 63, 134, 171, 123, 191, 70, 109, 129, 79, 237, 59, 1, 35, 22, 0, 0, 177, 0, 0, 128, 63, 103, 68, 113, 191, 70, 109, 130, 79, 250, 59, 0, 0, 49, 208, 13, 63, 0, 0, 128, 63, 115, 48, 67, 191, 70, 109, 130, 47, 57, 59, 0, 0, 52, 55, 85, 189, 5, 253, 113, 191, 134, 171, 123, 191, 127, 129, 130, 63, 136, 32, 199, 55, 52, 55, 85, 189, 5, 253, 113, 63, 134, 171, 123, 191, 127, 129, 130, 63, 136, 32, 1, 35, 52, 55, 85, 61, 5, 253, 113, 63, 134, 171, 123, 191, 127, 129, 130, 63, 0, 0, 1, 35, 52, 55, 85, 61, 5, 253, 113, 191, 134, 171, 123, 191, 127, 129, 129, 63, 0, 0, 199, 55, 128, 181, 30, 63, 5, 253, 113, 63, 206, 197, 67, 191, 127, 73, 130, 90, 33, 59, 1, 35, 128, 181, 30, 63, 5, 253, 113, 191, 206, 197, 67, 191, 127, 73, 130, 90, 33, 59, 199, 55, 171, 37, 9, 63, 5, 253, 113, 191, 55, 112, 83, 191, 127, 73, 130, 90, 69, 59, 199, 55, 171, 37, 9, 63, 5, 253, 113, 63, 55, 112, 83, 191, 127, 73, 130, 90, 69, 59, 1, 35, 128, 181, 30, 63, 5, 253, 113, 191, 206, 197, 67, 191, 74, 172, 130, 100, 33, 59, 199, 55, 12, 60, 107, 63, 5, 253, 113, 191, 88, 227, 180, 190, 74, 172, 130, 26, 120, 58, 199, 55, 109, 117, 101, 63, 0, 0, 128, 191, 126, 28, 149, 190, 74, 172, 130, 26, 108, 58, 0, 56, 49, 208, 13, 63, 0, 0, 128, 191, 115, 48, 67, 191, 74, 172, 130, 100, 45, 59, 0, 56, 12, 60, 107, 63, 5, 253, 113, 63, 88, 227, 180, 190, 74, 84, 130, 26, 120, 58, 1, 35, 128, 181, 30, 63, 5, 253, 113, 63, 206, 197, 67, 191, 74, 84, 130, 26, 33, 59, 1, 35, 49, 208, 13, 63, 0, 0, 128, 63, 115, 48, 67, 191, 74, 84, 130, 26, 45, 59, 0, 0, 109, 117, 101, 63, 0, 0, 128, 63, 126, 28, 149, 190, 74, 84, 130, 26, 108, 58, 0, 0, 121, 120, 115, 63, 5, 253, 113, 63, 131, 49, 130, 190, 127, 31, 129, 111, 84, 58, 1, 35, 121, 120, 115, 63, 5, 253, 113, 191, 131, 49, 130, 190, 127, 31, 130, 111, 84, 58, 199, 55, 12, 60, 107, 63, 5, 253, 113, 191, 88, 227, 180, 190, 127, 31, 130, 111, 120, 58, 199, 55, 12, 60, 107, 63, 5, 253, 113, 63, 88, 227, 180, 190, 127, 31, 130, 111, 120, 58, 1, 35, 121, 120, 115, 63, 5, 253, 113, 191, 131, 49, 130, 190, 63, 193, 126, 1, 84, 58, 199, 55, 104, 120, 115, 63, 5, 253, 113, 191, 131, 49, 130, 62, 63, 193, 126, 1, 171, 57, 199, 55, 109, 117, 101, 63, 0, 0, 128, 191, 126, 28, 149, 62, 63, 193, 126, 1, 159, 57, 0, 56, 109, 117, 101, 63, 0, 0, 128, 191, 126, 28, 149, 190, 63, 193, 126, 1, 96, 58, 0, 56, 104, 120, 115, 63, 5, 253, 113, 63, 131, 49, 130, 62, 63, 63, 126, 126, 171, 57, 1, 35, 121, 120, 115, 63, 5, 253, 113, 63, 131, 49, 130, 190, 63, 63, 126, 126, 84, 58, 1, 35, 109, 117, 101, 63, 0, 0, 128, 63, 126, 28, 149, 190, 63, 63, 126, 126, 96, 58, 0, 0, 109, 117, 101, 63, 0, 0, 128, 63, 126, 28, 149, 62, 63, 63, 126, 126, 159, 57, 0, 0, 12, 60, 107, 63, 5, 253, 113, 63, 88, 227, 180, 62, 95, 0, 127, 111, 135, 57, 1, 35, 12, 60, 107, 63, 5, 253, 113, 191, 88, 227, 180, 62, 95, 0, 127, 111, 135, 57, 199, 55, 104, 120, 115, 63, 5, 253, 113, 191, 131, 49, 130, 62, 95, 0, 127, 111, 171, 57, 199, 55, 104, 120, 115, 63, 5, 253, 113, 63, 131, 49, 130, 62, 95, 0, 127, 111, 171, 57, 1, 35, 12, 60, 107, 63, 5, 253, 113, 191, 88, 227, 180, 62, 42, 204, 126, 26, 135, 57, 199, 55, 128, 181, 30, 63, 5, 253, 113, 191, 206, 197, 67, 63, 42, 204, 126, 26, 222, 56, 199, 55, 49, 208, 13, 63, 0, 0, 128, 191, 115, 48, 67, 63, 42, 204, 126, 26, 210, 56, 0, 56, 109, 117, 101, 63, 0, 0, 128, 191, 126, 28, 149, 62, 42, 204, 126, 26, 147, 57, 0, 56, 128, 181, 30, 63, 5, 253, 113, 63, 206, 197, 67, 63, 42, 52, 126, 100, 222, 56, 1, 35, 12, 60, 107, 63, 5, 253, 113, 63, 88, 227, 180, 62, 42, 52, 126, 100, 135, 57, 1, 35, 109, 117, 101, 63, 0, 0, 128, 63, 126, 28, 149, 62, 42, 52, 126, 100, 147, 57, 0, 0, 49, 208, 13, 63, 0, 0, 128, 63, 115, 48, 67, 63, 42, 52, 126, 100, 210, 56, 0, 0, 171, 37, 9, 63, 5, 253, 113, 63, 55, 112, 83, 63, 53, 0, 126, 36, 186, 56, 1, 35, 171, 37, 9, 63, 5, 253, 113, 191, 55, 112, 83, 63, 53, 0, 126, 36, 186, 56, 199, 55, 128, 181, 30, 63, 5, 253, 113, 191, 206, 197, 67, 63, 53, 0, 126, 36, 222, 56, 199, 55, 128, 181, 30, 63, 5, 253, 113, 63, 206, 197, 67, 63, 53, 0, 127, 90, 222, 56, 1, 35, 171, 37, 9, 63, 5, 253, 113, 191, 55, 112, 83, 63, 17, 200, 126, 79, 186, 56, 199, 55, 25, 55, 85, 61, 5, 253, 113, 191, 134, 171, 123, 63, 17, 200, 126, 79, 18, 56, 199, 55, 252, 255, 179, 179, 0, 0, 128, 191, 103, 68, 113, 63, 17, 200, 126, 79, 5, 56, 0, 56, 49, 208, 13, 63, 0, 0, 128, 191, 115, 48, 67, 63, 17, 200, 126, 79, 198, 56, 0, 56, 25, 55, 85, 61, 5, 253, 113, 63, 134, 171, 123, 63, 17, 56, 126, 47, 18, 56, 1, 35, 171, 37, 9, 63, 5, 253, 113, 63, 55, 112, 83, 63, 17, 56, 126, 47, 186, 56, 1, 35, 49, 208, 13, 63, 0, 0, 128, 63, 115, 48, 67, 63, 17, 56, 126, 47, 198, 56, 0, 0, 2, 0, 176, 179, 0, 0, 128, 63, 103, 68, 113, 63, 17, 56, 126, 47, 5, 56, 0, 0, 79, 55, 85, 189, 5, 253, 113, 63, 134, 171, 123, 63, 0, 0, 126, 63, 219, 55, 1, 35, 79, 55, 85, 189, 5, 253, 113, 191, 134, 171, 123, 63, 0, 0, 126, 63, 219, 55, 199, 55, 25, 55, 85, 61, 5, 253, 113, 191, 134, 171, 123, 63, 0, 0, 126, 63, 18, 56, 199, 55, 25, 55, 85, 61, 5, 253, 113, 63, 134, 171, 123, 63, 0, 0, 126, 63, 18, 56, 1, 35, 79, 55, 85, 189, 5, 253, 113, 191, 134, 171, 123, 63, 239, 200, 95, 63, 219, 55, 199, 55, 171, 37, 9, 191, 5, 253, 113, 191, 38, 112, 83, 63, 239, 200, 95, 63, 138, 54, 199, 55, 49, 208, 13, 191, 0, 0, 128, 191, 115, 48, 67, 63, 239, 200, 95, 63, 114, 54, 0, 56, 252, 255, 179, 179, 0, 0, 128, 191, 103, 68, 113, 63, 239, 200, 95, 63, 244, 55, 0, 56, 171, 37, 9, 191, 5, 253, 113, 63, 55, 112, 83, 63, 239, 56, 95, 63, 138, 54, 1, 35, 79, 55, 85, 189, 5, 253, 113, 63, 134, 171, 123, 63, 239, 56, 95, 63, 219, 55, 1, 35, 2, 0, 176, 179, 0, 0, 128, 63, 103, 68, 113, 63, 239, 56, 95, 63, 244, 55, 0, 0, 49, 208, 13, 191, 0, 0, 128, 63, 115, 48, 67, 63, 239, 56, 95, 63, 114, 54, 0, 0, 128, 181, 30, 191, 5, 253, 113, 63, 206, 197, 67, 63, 203, 0, 73, 63, 66, 54, 1, 35, 128, 181, 30, 191, 5, 253, 113, 191, 206, 197, 67, 63, 203, 0, 73, 63, 66, 54, 199, 55, 171, 37, 9, 191, 5, 253, 113, 191, 38, 112, 83, 63, 203, 0, 73, 63, 138, 54, 199, 55, 171, 37, 9, 191, 5, 253, 113, 63, 55, 112, 83, 63, 203, 0, 73, 63, 138, 54, 1, 35, 128, 181, 30, 191, 5, 253, 113, 191, 206, 197, 67, 63, 214, 204, 53, 63, 66, 54, 199, 55, 12, 60, 107, 191, 5, 253, 113, 191, 88, 227, 180, 62, 214, 204, 53, 63, 241, 52, 199, 55, 109, 117, 101, 191, 0, 0, 128, 191, 126, 28, 149, 62, 214, 204, 53, 63, 216, 52, 0, 56, 49, 208, 13, 191, 0, 0, 128, 191, 115, 48, 67, 63, 214, 204, 53, 63, 90, 54, 0, 56, 12, 60, 107, 191, 5, 253, 113, 63, 88, 227, 180, 62, 214, 52, 53, 63, 241, 52, 1, 35, 128, 181, 30, 191, 5, 253, 113, 63, 206, 197, 67, 63, 214, 52, 53, 63, 66, 54, 1, 35, 49, 208, 13, 191, 0, 0, 128, 63, 115, 48, 67, 63, 214, 52, 53, 63, 90, 54, 0, 0, 109, 117, 101, 191, 0, 0, 128, 63, 126, 28, 149, 62, 214, 52, 53, 63, 216, 52, 0, 0, 104, 120, 115, 191, 5, 253, 113, 63, 131, 49, 130, 62, 161, 0, 31, 63, 168, 52, 1, 35, 104, 120, 115, 191, 5, 253, 113, 191, 131, 49, 130, 62, 161, 0, 31, 63, 168, 52, 199, 55, 12, 60, 107, 191, 5, 253, 113, 191, 88, 227, 180, 62, 161, 0, 31, 63, 241, 52, 199, 55, 12, 60, 107, 191, 5, 253, 113, 63, 88, 227, 180, 62, 161, 0, 31, 63, 241, 52, 1, 35, 104, 120, 115, 191, 5, 253, 113, 191, 131, 49, 130, 62, 193, 193, 0, 63, 168, 52, 199, 55, 104, 120, 115, 191, 5, 253, 113, 191, 131, 49, 130, 190, 193, 193, 0, 63, 174, 50, 199, 55, 109, 117, 101, 191, 0, 0, 128, 191, 126, 28, 149, 190, 193, 193, 0, 63, 125, 50, 0, 56, 109, 117, 101, 191, 0, 0, 128, 191, 126, 28, 149, 62, 193, 193, 0, 63, 193, 52, 0, 56, 104, 120, 115, 191, 5, 253, 113, 63, 131, 49, 130, 190, 193, 63, 0, 63, 174, 50, 1, 35, 104, 120, 115, 191, 5, 253, 113, 63, 131, 49, 130, 62, 193, 63, 0, 63, 168, 52, 1, 35, 109, 117, 101, 191, 0, 0, 128, 63, 126, 28, 149, 62, 193, 63, 0, 63, 193, 52, 0, 0, 109, 117, 101, 191, 0, 0, 128, 63, 126, 28, 149, 190, 193, 63, 0, 63, 125, 50, 0, 0, 12, 60, 107, 191, 5, 253, 113, 63, 88, 227, 180, 190, 129, 31, 225, 63, 29, 50, 1, 35, 12, 60, 107, 191, 5, 253, 113, 191, 88, 227, 180, 190, 129, 31, 225, 63, 29, 50, 199, 55, 104, 120, 115, 191, 5, 253, 113, 191, 131, 49, 130, 190, 129, 31, 225, 63, 174, 50, 199, 55, 104, 120, 115, 191, 5, 253, 113, 63, 131, 49, 130, 190, 129, 31, 225, 63, 174, 50, 1, 35, 12, 60, 107, 191, 5, 253, 113, 191, 88, 227, 180, 190, 182, 172, 203, 63, 29, 50, 199, 55, 128, 181, 30, 191, 5, 253, 113, 191, 206, 197, 67, 191, 182, 172, 203, 63, 247, 46, 199, 55, 49, 208, 13, 191, 0, 0, 128, 191, 115, 48, 67, 191, 182, 172, 203, 63, 149, 46, 0, 56, 109, 117, 101, 191, 0, 0, 128, 191, 126, 28, 149, 190, 182, 172, 203, 63, 78, 50, 0, 56, 128, 181, 30, 191, 5, 253, 113, 63, 206, 197, 67, 191, 182, 84, 203, 63, 247, 46, 1, 35, 12, 60, 107, 191, 5, 253, 113, 63, 88, 227, 180, 190, 182, 84, 203, 63, 29, 50, 1, 35, 109, 117, 101, 191, 0, 0, 128, 63, 126, 28, 149, 190, 182, 84, 203, 63, 78, 50, 0, 0, 49, 208, 13, 191, 0, 0, 128, 63, 115, 48, 67, 191, 182, 84, 203, 63, 149, 46, 0, 0, 171, 37, 9, 191, 5, 253, 113, 63, 55, 112, 83, 191, 129, 73, 183, 63, 213, 45, 1, 35, 171, 37, 9, 191, 5, 253, 113, 191, 55, 112, 83, 191, 129, 73, 183, 63, 213, 45, 199, 55, 128, 181, 30, 191, 5, 253, 113, 191, 206, 197, 67, 191, 129, 73, 183, 63, 247, 46, 199, 55, 128, 181, 30, 191, 5, 253, 113, 63, 206, 197, 67, 191, 129, 73, 183, 63, 247, 46, 1, 35, 171, 37, 9, 191, 5, 253, 113, 191, 55, 112, 83, 191, 186, 147, 161, 63, 213, 45, 199, 55, 52, 55, 85, 189, 5, 253, 113, 191, 134, 171, 123, 191, 186, 147, 161, 63, 136, 32, 199, 55, 255, 255, 127, 49, 0, 0, 128, 191, 103, 68, 113, 191, 186, 147, 161, 63, 228, 25, 0, 56, 49, 208, 13, 191, 0, 0, 128, 191, 115, 48, 67, 191, 186, 147, 161, 63, 55, 46, 0, 56, 52, 55, 85, 189, 5, 253, 113, 63, 134, 171, 123, 191, 186, 109, 161, 63, 136, 32, 1, 35, 171, 37, 9, 191, 5, 253, 113, 63, 55, 112, 83, 191, 186, 109, 161, 63, 213, 45, 1, 35, 49, 208, 13, 191, 0, 0, 128, 63, 115, 48, 67, 191, 186, 109, 161, 63, 55, 46, 0, 0, 22, 0, 0, 177, 0, 0, 128, 63, 103, 68, 113, 191, 186, 109, 161, 63, 228, 25, 0, 0, 109, 117, 101, 63, 0, 0, 128, 191, 126, 28, 149, 62, 0, 130, 126, 193, 184, 59, 143, 58, 109, 117, 101, 191, 0, 0, 128, 191, 126, 28, 149, 62, 0, 130, 126, 193, 71, 56, 143, 58, 49, 208, 13, 191, 0, 0, 128, 191, 115, 48, 67, 191, 0, 130, 126, 193, 239, 56, 137, 56, 49, 208, 13, 63, 0, 0, 128, 63, 115, 48, 67, 191, 0, 127, 126, 63, 32, 54, 137, 56, 22, 0, 0, 177, 0, 0, 128, 63, 103, 68, 113, 191, 0, 127, 127, 63, 0, 52, 48, 56, 22, 0, 0, 177, 0, 0, 128, 63, 103, 68, 113, 191, 0, 126, 126, 63, 0, 52, 48, 56, 49, 208, 13, 191, 0, 0, 128, 63, 115, 48, 67, 191, 0, 126, 126, 63, 125, 47, 137, 56, 109, 117, 101, 191, 0, 0, 128, 63, 126, 28, 149, 190, 0, 126, 126, 63, 119, 40, 112, 57, 109, 117, 101, 191, 0, 0, 128, 63, 126, 28, 149, 62, 0, 127, 127, 63, 119, 40, 143, 58, 49, 208, 13, 191, 0, 0, 128, 63, 115, 48, 67, 63, 0, 127, 127, 63, 125, 47, 118, 59, 49, 208, 13, 191, 0, 0, 128, 63, 115, 48, 67, 63, 0, 127, 127, 63, 125, 47, 118, 59, 2, 0, 176, 179, 0, 0, 128, 63, 103, 68, 113, 63, 0, 127, 127, 63, 0, 52, 207, 59, 49, 208, 13, 63, 0, 0, 128, 63, 115, 48, 67, 63, 0, 127, 127, 63, 32, 54, 118, 59, 109, 117, 101, 63, 0, 0, 128, 63, 126, 28, 149, 62, 0, 127, 127, 63, 113, 55, 143, 58, 49, 208, 13, 191, 0, 0, 128, 191, 115, 48, 67, 191, 0, 129, 126, 193, 239, 56, 137, 56, 255, 255, 127, 49, 0, 0, 128, 191, 103, 68, 113, 191, 0, 129, 127, 193, 0, 58, 48, 56, 49, 208, 13, 63, 0, 0, 128, 191, 115, 48, 67, 191, 0, 129, 127, 193, 16, 59, 137, 56, 109, 117, 101, 63, 0, 0, 128, 191, 126, 28, 149, 190, 0, 129, 126, 193, 184, 59, 112, 57, 109, 117, 101, 63, 0, 0, 128, 191, 126, 28, 149, 62, 0, 129, 126, 193, 184, 59, 143, 58, 109, 117, 101, 63, 0, 0, 128, 191, 126, 28, 149, 62, 0, 129, 127, 193, 184, 59, 143, 58, 49, 208, 13, 63, 0, 0, 128, 191, 115, 48, 67, 63, 0, 129, 127, 193, 16, 59, 118, 59, 109, 117, 101, 191, 0, 0, 128, 191, 126, 28, 149, 62, 0, 129, 127, 193, 71, 56, 143, 58, 252, 255, 179, 179, 0, 0, 128, 191, 103, 68, 113, 63, 0, 129, 127, 193, 0, 58, 207, 59, 49, 208, 13, 191, 0, 0, 128, 191, 115, 48, 67, 63, 0, 129, 127, 193, 239, 56, 118, 59, 109, 117, 101, 191, 0, 0, 128, 191, 126, 28, 149, 62, 0, 130, 126, 193, 71, 56, 143, 58, 109, 117, 101, 191, 0, 0, 128, 191, 126, 28, 149, 190, 0, 130, 126, 193, 71, 56, 112, 57, 49, 208, 13, 191, 0, 0, 128, 191, 115, 48, 67, 191, 0, 130, 126, 193, 239, 56, 137, 56 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 20, 0, 23, 0, 22, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 28, 0, 30, 0, 29, 0, 28, 0, 31, 0, 30, 0, 32, 0, 34, 0, 33, 0, 32, 0, 35, 0, 34, 0, 36, 0, 38, 0, 37, 0, 39, 0, 41, 0, 40, 0, 39, 0, 42, 0, 41, 0, 43, 0, 45, 0, 44, 0, 46, 0, 48, 0, 47, 0, 49, 0, 51, 0, 50, 0, 52, 0, 54, 0, 53, 0, 55, 0, 57, 0, 56, 0, 58, 0, 60, 0, 59, 0, 61, 0, 63, 0, 62, 0, 64, 0, 66, 0, 65, 0, 67, 0, 69, 0, 68, 0, 70, 0, 72, 0, 71, 0, 73, 0, 75, 0, 74, 0, 76, 0, 78, 0, 77, 0, 79, 0, 81, 0, 80, 0, 82, 0, 84, 0, 83, 0, 85, 0, 87, 0, 86, 0, 88, 0, 90, 0, 89, 0, 91, 0, 93, 0, 92, 0, 94, 0, 96, 0, 95, 0, 97, 0, 99, 0, 98, 0, 100, 0, 102, 0, 101, 0, 103, 0, 105, 0, 104, 0, 103, 0, 106, 0, 105, 0, 107, 0, 109, 0, 108, 0, 107, 0, 110, 0, 109, 0, 111, 0, 113, 0, 112, 0, 111, 0, 114, 0, 113, 0, 115, 0, 117, 0, 116, 0, 115, 0, 118, 0, 117, 0, 119, 0, 121, 0, 120, 0, 119, 0, 122, 0, 121, 0, 123, 0, 125, 0, 124, 0, 123, 0, 126, 0, 125, 0, 127, 0, 129, 0, 128, 0, 127, 0, 130, 0, 129, 0, 131, 0, 133, 0, 132, 0, 131, 0, 134, 0, 133, 0, 135, 0, 137, 0, 136, 0, 135, 0, 138, 0, 137, 0, 139, 0, 141, 0, 140, 0, 139, 0, 142, 0, 141, 0, 143, 0, 145, 0, 144, 0, 143, 0, 146, 0, 145, 0, 147, 0, 149, 0, 148, 0, 147, 0, 150, 0, 149, 0, 151, 0, 153, 0, 152, 0, 151, 0, 154, 0, 153, 0, 155, 0, 157, 0, 156, 0, 155, 0, 158, 0, 157, 0, 159, 0, 161, 0, 160, 0, 159, 0, 162, 0, 161, 0, 163, 0, 165, 0, 164, 0, 163, 0, 166, 0, 165, 0, 167, 0, 169, 0, 168, 0, 167, 0, 170, 0, 169, 0, 171, 0, 173, 0, 172, 0, 171, 0, 174, 0, 173, 0, 175, 0, 177, 0, 176, 0, 175, 0, 178, 0, 177, 0, 179, 0, 181, 0, 180, 0, 179, 0, 182, 0, 181, 0, 183, 0, 185, 0, 184, 0, 183, 0, 186, 0, 185, 0, 187, 0, 189, 0, 188, 0, 187, 0, 190, 0, 189, 0, 191, 0, 193, 0, 192, 0, 191, 0, 194, 0, 193, 0, 195, 0, 197, 0, 196, 0, 195, 0, 198, 0, 197, 0, 199, 0, 201, 0, 200, 0, 199, 0, 202, 0, 201, 0, 203, 0, 205, 0, 204, 0, 203, 0, 206, 0, 205, 0, 207, 0, 209, 0, 208, 0, 207, 0, 210, 0, 209, 0, 211, 0, 213, 0, 212, 0, 211, 0, 214, 0, 213, 0, 215, 0, 217, 0, 216, 0, 215, 0, 218, 0, 217, 0, 219, 0, 221, 0, 220, 0, 219, 0, 222, 0, 221, 0, 223, 0, 225, 0, 224, 0, 38, 0, 227, 0, 226, 0, 228, 0, 230, 0, 229, 0, 36, 0, 232, 0, 231, 0, 233, 0, 235, 0, 234, 0, 37, 0, 38, 0, 236, 0, 38, 0, 36, 0, 227, 0, 36, 0, 37, 0, 232, 0, 237, 0, 239, 0, 238, 0, 239, 0, 237, 0, 240, 0, 240, 0, 237, 0, 241, 0, 242, 0, 244, 0, 243, 0, 243, 0, 244, 0, 245, 0, 245, 0, 244, 0, 246, 0, 247, 0, 249, 0, 248, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 348,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 250
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Cylinder:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "OnSelected"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cylinder:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.25, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "OnSelected"

[sub_resource type="AnimationNodeStateMachineTransition" id=8]
advance_condition = "selected"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]
advance_condition = "idle"

[sub_resource type="AnimationNodeStateMachine" id=3]
states/Idle/node = SubResource( 6 )
states/Idle/position = Vector2( 127, 96 )
states/OnSelected/node = SubResource( 7 )
states/OnSelected/position = Vector2( 330, 96 )
transitions = [ "Idle", "OnSelected", SubResource( 8 ), "OnSelected", "Idle", SubResource( 9 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=4]

[node name="Piece" type="Spatial"]
script = ExtResource( 1 )
onSelectMP3 = ExtResource( 2 )
onCaptureMP3 = ExtResource( 3 )

[node name="Cylinder" type="MeshInstance" parent="."]
transform = Transform( 0.66, 0, 0, 0, 0.1, 0, 0, 0, 0.66, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 5 )
anims/OnSelected = SubResource( 2 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 3 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 4 )
parameters/conditions/idle = false
parameters/conditions/selected = false

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
unit_db = 5.0

[node name="TweenHorizontal" type="Tween" parent="."]

[node name="TweenVertical" type="Tween" parent="."]

[connection signal="finished" from="AudioStreamPlayer3D" to="." method="_on_AudioStreamPlayer3D_finished"]
[connection signal="tween_completed" from="TweenHorizontal" to="." method="_on_TweenHorizontal_tween_completed"]
[connection signal="tween_completed" from="TweenVertical" to="." method="_on_TweenVertical_tween_completed"]
